--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,8 @@ section {
 
 header {
     display: flex;
-    justify-content: flex-end;
+    justify-content: center;
+    align-items: center;
     background-color: var(--color3);
     height: var(--header-height);
     box-shadow: var(--shadow);
@@ -68,14 +69,6 @@ h2 {
 
 .gutter-right {
     margin-right: 20px;
-}
-
-.main-logo {
-    animation: pulse 5s infinite ease-in-out;
-}
-
-header img {
-    height: var(--header-height);
 }
 
 p {
@@ -121,3 +114,4 @@ footer {
       height:300px;
       width:300px;
   }
+
